--- a/helm/templates/agent/serviceaccount.yaml
+++ b/helm/templates/agent/serviceaccount.yaml
@@ -2,4 +2,4 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: grafana-agent
-  namespace: default
+  namespace: {{ .Values.global.namespace }}
