--- a/helm/templates/agent/configmap.yaml
+++ b/helm/templates/agent/configmap.yaml
@@ -1,6 +1,7 @@
 kind: ConfigMap
 metadata:
   name: grafana-agent
+  namespace: {{ .Values.global.namespace }}
 apiVersion: v1
 data:
   agent.yaml: |
@@ -74,6 +75,9 @@ data:
                 regex: kube-state-metrics
                 source_labels:
                   - __meta_kubernetes_pod_label_app_kubernetes_io_name
+        - job_name: agent
+          static_configs:
+            - targets: ['localhost']
     integrations:
       eventhandler:
         cache_path: /var/lib/agent/eventhandler.cache
