--- a/helm/templates/service.yaml
+++ b/helm/templates/service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ .Values.global.service.name }}
+  namespace: {{ .Values.global.namespace }}
   labels:
     # {{- include "privacy-app.labels" . | nindent 4 }}
 spec:
