--- a/helm/templates/serviceaccount.yaml
+++ b/helm/templates/serviceaccount.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "privacy-app.serviceAccountName" . }}
+  namespace: {{ .Values.global.namespace }}
   labels:
     {{- include "privacy-app.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
